<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/preSurveysTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/if_you_haven_t_recieved_your_playlist_you_will_need_to_complete_the_surveys_below"
        android:textAlignment="center"
        android:textColor="#0F0000"
        android:layout_margin="30dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/preSurveys"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="30dp"
        android:textSize="@dimen/button_text_size"
        android:text="@string/go_to_pre_surveys" />

    <TextView
        android:id="@+id/postSurveysTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/post_survey_title"
        android:textAlignment="center"
        android:textColor="#0F0000"
        android:layout_margin="30dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/postSurveys"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="30dp"
        android:textSize="@dimen/button_text_size"
        android:text="@string/go_to_post_surveys" />

</LinearLayout>