<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/song_name_hint"
                    android:textSize="@dimen/song_info_text_size" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textSize="@dimen/song_info_text_size"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/song_artist_hint"
                    android:textSize="@dimen/song_info_text_size" />

                <TextView
                    android:id="@+id/txtArtist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textSize="@dimen/song_info_text_size"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/song_tempo_hint"
                    android:textSize="@dimen/song_info_text_size" />

                <TextView
                    android:id="@+id/txtTempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textSize="@dimen/song_info_text_size"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/song_mode_hint"
                    android:textSize="@dimen/song_info_text_size" />

                <TextView
                    android:id="@+id/txtMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textSize="@dimen/song_info_text_size"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/song_genre_hint"
                    android:textSize="@dimen/song_info_text_size" />

                <TextView
                    android:id="@+id/txtGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textSize="@dimen/song_info_text_size"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/song_year_hint"
                    android:textSize="@dimen/song_info_text_size" />

                <TextView
                    android:id="@+id/txtYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textSize="@dimen/song_info_text_size"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginRight="10dp"
                    android:text="@string/song_lyric_type_hint"
                    android:textSize="@dimen/song_info_text_size" />

                <TextView
                    android:id="@+id/txtLyricType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textSize="@dimen/song_info_text_size"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btnPlay"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="PLAY" />

    </LinearLayout>
</ScrollView>